<resources>
    <string name="app_name">MareaGris</string>
    <string name="textUnidad">Unidad</string>
    <string name="textCantidad">Cantidad</string>
    <string name="textFecha">Fecha Compra</string>
    <string name="add_empresa">Agregar Empresa</string>

    <string name="hint_empresa">Empresa</string>
    <string name="btn_crear_empresa">Guardar</string>
    <string name="empty_not_saved">La empresa no se ha guardado porque los valores están en blanco</string>
    <string name="add_word">Añadir empresa</string>

    <string name="hint_juego">Juego…</string>
    <string name="btn_crear_juego">Guardar</string>
    <string name="empty_juego_not_saved">El juego no se ha guardado porque los valores están en blanco</string>
    <string name="add_juego">Añadir juego</string>


    <!-- Nombre de los activitys en la barNav -->
    <string name="activity_name_list_juegos">Lista de Juegos</string>
    <string name="activity_name_list_facciones">Lista de Facciones</string>
    <string name="activity_name_list_ejercitos">Lista de Ejercitos</string>
    <string name="activity_name_list_empresas">Lista de Empresas</string>
    <string name="activity_name_list_escuadras">Lista de Escuadras</string>

    <!-- Activity Ejercito New -->
    <string name="add_ejercito">Añadir ejercito</string>
    <string name="hint_ejercito">Ejercito…</string>

    <!-- Activity Faccion New -->
    <string name="add_faccion">Añadir ejercito</string>
    <string name="hint_faccion">Ejercito…</string>

    <!-- Activity Escuadra New -->
    <string name="add_escuadra">Añadir escuadra</string>
    <string name="hint_escuadra">Escuadra…</string>
    <string name="nombre_escuadra">Unidad</string>
    <string name="tipo_unidad">Tipo</string>
    <string name="nombre_sec_escuadra">Nombre Escuadra</string>


    <!-- String Genericos -->
    <string name="empty_image_not_select">No se seleccionó ninguna imagen</string>
    <string name="btn_guardar">Guardar</string>
    <string name="select_image">Seleccionar Imagen</string>
    <string name="miniaturas">Miniaturas: %d</string>
    <string name="completadas">Completadas: %d</string>
    <string name="mareagris">Marea Gris: %d %%</string>

    <!-- String Lista Escuadras -->
    <string name="cantidad_unidades">Cantidad: %s</string>
    <string name="tipo_unidad_val">Tipo: %s</string>
    <string name="nombre_sec_escuadra_val">Escuadra: %s</string>
    <string name="nombre_unidad">Unidad: %s</string>

    <!-- String Menú Selecto Tippo Unidad -->
    <string name="tipo_tropa">Tropas</string>
    <string name="tipo_tanque">Tanque</string>
    <string name="tipo_volador">Volador</string>
    <string name="tipo_cg">C.G.</string>
    <string name="tipo_elite">Elite</string>
    <string name="tipo_fortificacion">Fortificación</string>
    <string name="tipo_amo">Amo de la Guerra</string>

    <string name="dificultad">Dificultad Estimada</string>
    <string name="fecha_compra">Fecha de Compra</string>
    <string name="imagen_de_cabecera">Imagen de cabecera</string>
    <string name="avatar">Avatar</string>
    <string name="tiempoTotal">T. Total: %s</string>
    <string name="tiempoMedio">T. Medio: %s</string>
    <string name="tiempoDistribucion">T. Estimado: %s</string>
    <string name="dificultad_val">Dificultad: %s</string>
    <string name="dificultad_estimada">Dif. Estimada: %s</string>
    <string name="variacion">Variacion: %s</string>

    <string name="add_escuadra_existente_query">Crear nueva Escuadra:</string>
    <string name="dialog_escuadra_si">Si</string>
    <string name="dialog_escuadra_no">No</string>

    <string name="tiempo_invertido">Tiempo Invertido</string>
    <string name="fecha_fin">Fecha Finalizado</string>
    <string name="btn_terminar">Terminar</string>
    <string name="comentario">Comentario</string>
    <string name="title_activity_proceso_list">ProcesoListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="fecha_compra_val">Fecha de Compra: %s</string>
    <string name="tiempo_estimado">Tiempo estimado: %s</string>
    <string name="finalizar">Finalizar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="esadoVal">Estado: %s</string>
    <string name="fecha_fin_val">Fecha Terminado: %s</string>
    <string name="tiempoVal">Tiempo: %d</string>
    <string name="action_settings">Menú</string>
    <string name="file">Configuracion</string>
    <string name="create_new">Crear nuevo</string>
    <string name="editar">Editar</string>
    <string name="add_favorito">Añadir a favoritos</string>
    <string name="action_home">Home</string>
    <string name="help">Ayuda</string>
    <string name="agrupar_escuadras">Agrupar Escuadras?</string>
    <string name="iniciar">Iniciar</string>
    <string name="parar">Parar</string>
    <string name="reiniciar">Reiniciar</string>
</resources>