<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.detail.ProcesoDetailActivity">

    <TextView
        android:id="@+id/tv_unidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/nombre_unidad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_escuadra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/nombre_sec_escuadra_val"
        app:layout_constraintEnd_toEndOf="@+id/tv_unidad"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_unidad"
        app:layout_constraintTop_toBottomOf="@+id/tv_unidad" />

    <TextView
        android:id="@+id/tv_estado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/esadoVal"
        app:layout_constraintEnd_toEndOf="@+id/tv_escuadra"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_escuadra"
        app:layout_constraintTop_toBottomOf="@+id/tv_escuadra" />

    <TextView
        android:id="@+id/tv_fercha_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fecha_compra_val"
        app:layout_constraintEnd_toEndOf="@+id/tv_estado"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_estado"
        app:layout_constraintTop_toBottomOf="@+id/tv_estado" />

    <TextView
        android:id="@+id/tv_fecha_terminado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fecha_fin_val"
        app:layout_constraintEnd_toEndOf="@+id/tv_fercha_compra"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_fercha_compra"
        app:layout_constraintTop_toBottomOf="@+id/tv_fercha_compra" />

    <TextView
        android:id="@+id/tv_tiempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fecha_fin_val"
        app:layout_constraintEnd_toEndOf="@+id/tv_fecha_terminado"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_fecha_terminado"
        app:layout_constraintTop_toBottomOf="@+id/tv_fecha_terminado" />

    <Button
        android:id="@+id/btn_finalizar"
        android:layout_width="363dp"
        android:layout_height="43dp"
        android:layout_marginBottom="16dp"
        android:text="@string/finalizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>