<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_faccion"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="215dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/avatar"
                                tools:layout_editor_absoluteX="0dp"
                                tools:layout_editor_absoluteY="-16dp"
                                tools:srcCompat="@tools:sample/avatars" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/txtUnidad"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="16dp"
                                android:text="@string/nombre_unidad"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/txtNombreEscuadra"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="@string/nombre_sec_escuadra_val"
                                app:layout_constraintEnd_toEndOf="@+id/txtUnidad"
                                app:layout_constraintHorizontal_bias="0.0"
                                app:layout_constraintStart_toStartOf="@+id/txtUnidad"
                                app:layout_constraintTop_toBottomOf="@+id/txtUnidad" />

                            <TextView
                                android:id="@+id/txtTipoUnidad"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="@string/tipo_unidad_val"
                                app:layout_constraintEnd_toEndOf="@+id/txtNombreEscuadra"
                                app:layout_constraintHorizontal_bias="0.0"
                                app:layout_constraintStart_toStartOf="@+id/txtNombreEscuadra"
                                app:layout_constraintTop_toBottomOf="@+id/txtNombreEscuadra" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight=".33"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtCantidad"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cantidad_unidades" />

                        <TextView
                            android:id="@+id/txtPintadas"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/completadas" />

                        <TextView
                            android:id="@+id/txtMareaGris"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mareagris" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight=".33"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtTiempoTotal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tiempoTotal" />

                        <TextView
                            android:id="@+id/txtTiempoMedio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tiempoMedio" />

                        <TextView
                            android:id="@+id/txtTiempoDistribucion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tiempoDistribucion" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight=".33"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtDif"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dificultad_val" />

                        <TextView
                            android:id="@+id/txtDifEstimada"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dificultad_estimada" />

                        <TextView
                            android:id="@+id/txtVariacion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/variacion" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>