<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_faccion"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/ti_nombre_sec_escuadra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nombre_sec_escuadra_val"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ti_fecha_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fecha_compra_val"
        app:layout_constraintEnd_toEndOf="@+id/ti_nombre_sec_escuadra"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ti_nombre_sec_escuadra"
        app:layout_constraintTop_toBottomOf="@+id/ti_nombre_sec_escuadra" />

    <TextView
        android:id="@+id/ti_tiempo_estimado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tiempo_estimado"
        app:layout_constraintEnd_toEndOf="@+id/ti_fecha_compra"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ti_fecha_compra"
        app:layout_constraintTop_toBottomOf="@+id/ti_fecha_compra" />
</LinearLayout>